1.5/dep-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: nginx:1.19.1
          ports: 
            - containerPort: 80
              name: web
              protocol: TCP
          imagePullPolicy: IfNotPresent
          name: frontend
---
apiVersion: v1
kind: Service
metadata:
  name:  frontend-svc
  namespace: default
spec:
  ports:
    - name: web
      port: 80
  selector:
    app: frontend
  type: ClusterIP
