1.5/ingress-mult-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-front-back
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 80
